Fixed all bugs, final version forgot number4 has id AND class Command shift R for clean browser cache This is CSS after all

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,18 +1,18 @@
-.number1,
-.number3 {
+.oneven {
     background-color: pink;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-.number3 {
+
+.adjust-font-size {
     font-size: 24px;
-}
-#title {
-    color:blue;
-    font-size: 36px;
-}
-#number4 {
-    background-color: lightgreen;
-    font-size: 24px;
-    font-weight: bold;
 }
 
+#two {
+    color: blue;
+    font-size: 36px;
+}
+
+#number4 {
+    background-color: green;
+    font-weight: bold;
+}
